FIX: indices of faq nested collapse MOD: mission tasks within nested collapse; headings letter spacing

--- a/src/AppBundle/Resources/scss/headings.scss
+++ b/src/AppBundle/Resources/scss/headings.scss
@@ -2,6 +2,7 @@
   h1 {
     font-family: 'Bangers';
     color: $color-xenobladex;
+    letter-spacing: 0.1rem;
   }
 
   h1, h2, h3, h4, h5, h6 {
